--- a/html/css/home.css
+++ b/html/css/home.css
@@ -153,7 +153,7 @@ body{
     top:0;
     left: 0;
     height: 5px;
-    background-color: #D7DCE0;
+    background-color: #FCE4C7;
 }
 
 .jp-play-bar{
